--- a/front_end/index.html
+++ b/front_end/index.html
@@ -27,7 +27,8 @@
   </div>
 </section>
 
-<div class="container">
+<div class="container" ng-controller="freekendController as vm">
+
 	<br>
 	<div class="box">
 		<div class="field">
@@ -44,40 +45,43 @@
 	</div>
 
 	<br>
-	<div class="box">
-		<div class="columns">
-		  <div class="column is-half">
-		  	<div class="media-left">
-		      <figure class="image">
-		        <img src="http://i.imgur.com/HqP5xyB.jpg" alt="Image">
-		      </figure>
-		    </div>
-		  </div>
-		  <div class="column">
-		  	<div class="media-content">
-		      <div class="content">
-		      	<p class="title is-3"><strong>Event Name</strong></p>
-		      	<p class="title is-3"><small>7:30pm</small></p>
-		      	<p>
-		      		<strong>1465 My Drive</strong><br>
-		      		<strong>Garden City, NY 12312</strong>
-		      	</p>
-		        <p>
-		          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
-		        </p>
+	<div ng-repeat="event in vm.event_list">
+		
+		<div class="box" >
+			<div class="columns">
+			  <div class="column is-half">
+			  	<div class="media-left">
+			      <figure class="image">
+			        <img ng-src="{{event.photo_url}}" alt="Image">
+			      </figure>
+			    </div>
+			  </div>
+			  <div class="column">
+			  	<div class="media-content">
+			      <div class="content">
+			      	<p class="title is-3"><strong>{{ event.name }}</strong></p>
+			      	<p class="title is-3"><small>{{ event.time }}</small></p>
+			      	<p>
+			      		<strong>{{ event.address }}</strong><br>
+			      		<strong>{{ event.city }}, {{ event.address }} {{ event.zip }}</strong>
+			      	</p>
+			        <p>
+			          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
+			        </p>
 
-		      </div>
-		      <nav class="level is-mobile">
-		        <div class="level-left">
-		          <a class="level-item">
-		            <span class="icon is-medium"><i class="fa fa-heart"></i></span>
-		          </a>
-		        </div>
-		      </nav>
-		    </div>
-		  </div>
+			      </div>
+			      <nav class="level is-mobile">
+			        <div class="level-left">
+			          <a class="level-item">
+			            <span class="icon is-medium"><i class="fa fa-heart"></i></span>
+			          </a>
+			        </div>
+			      </nav>
+			    </div>
+			  </div>
+			</div>
 		</div>
-
+		<br>
 	</div>
 
 
