Gradually destroying the card css and adding/removing unnecessary styling

--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -29,30 +29,36 @@
               <span class="icon is-medium"><i class="fa fa-heart"></i></span>
             </a>
           </div>
-          <!-- comment card nested below -->
-          <div class="comment">
-            <div class="columns">
-              <div class="column is-half">
-                <div class="media-left">
-                </div>
-              </div>
-              <div class="column">
-                <div class="media-content">
-                  <div class="comment_content">
-                    <p class="title is-3"><strong>Username</strong></p><p>posted at <small>[timestamp]</small></p>
-                    <p>
-                      Hey that is kinda neat.
-                    </p>
-                    <button type="report" name="report">report</button>
-                  </div>
-                </div>
-              </div>
-            </div>
 
           </div>
         </nav>
       </div>
     </div>
+
+    <div class="columns">
+      <!-- comment card nested below -->
+      <div class="column is-2">
+
+      </div>
+      <div class="column is-8">
+      <div class="comment">
+            <div class="media-content">
+              <div class="comment_content">
+                <p class="title is-3"><strong>Username</strong></p><p>posted at <small>[timestamp]</small></p>
+                <p>
+                  Hey that is kinda neat.
+                </p>
+
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="column">
+
+      </div>
   </div>
 
+</div>
+
+</div>
 </div>
