tweaks to bulma.css

--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -12,6 +12,11 @@
     <div class="column">
       <div class="media-content">
         <div class="content">
+          <div class="level-right">
+            <a class="level-item">
+              <span class="icon is-medium"><i class="fa fa-heart"></i></span>
+            </a>
+          </div>
           <p class="title is-3"><strong>Event Name</strong></p>
           <p class="title is-3"><small>7:30pm</small></p>
           <p>
@@ -24,12 +29,6 @@
 
         </div>
         <nav class="level is-mobile">
-          <div class="level-left">
-            <a class="level-item">
-              <span class="icon is-medium"><i class="fa fa-heart"></i></span>
-            </a>
-          </div>
-
           </div>
         </nav>
       </div>
@@ -37,14 +36,12 @@
 
     <div class="columns">
       <!-- comment card nested below -->
-      <div class="column is-2">
-
-      </div>
-      <div class="column is-8">
+      <div class="column is-10">
       <div class="comment">
             <div class="media-content">
               <div class="comment_content">
-                <p class="title is-3"><strong>Username</strong></p><p>posted at <small>[timestamp]</small></p>
+                <p class="title is-2">Username</p>
+                <p>posted at <small>[timestamp]</small></p>
                 <p>
                   Hey that is kinda neat.
                 </p>
