--- a/front_end/js/ng-views/index.html
+++ b/front_end/js/ng-views/index.html
@@ -1,26 +1,26 @@
 	<br>
-	<div ng-repeat="event in vm.event_list">
+	<div ng-repeat="event in vm.events">
 		
 		<div class="box" >
 			<div class="columns">
 			  <div class="column is-half">
 			  	<div class="media-left">
 			      <figure class="image">
-			        <img ng-src="{{event.photo_url}}" alt="Image">
+			        <img ng-src="{{event.image.medium.url}}" alt="Image">
 			      </figure>
 			    </div>
 			  </div>
 			  <div class="column">
 			  	<div class="media-content">
 			      <div class="content">
-			      	<p class="title is-3"><strong>{{ event.name }}</strong></p>
-			      	<p class="title is-3"><small>{{ event.time }}</small></p>
+			      	<p class="title is-3"><strong>{{ event.title }}</strong></p>
+			      	<p class="title is-3"><small>{{ event.start_time }}</small></p>
 			      	<p>
-			      		<strong>{{ event.address }}</strong><br>
-			      		<strong>{{ event.city }}, {{ event.address }} {{ event.zip }}</strong>
+			      		<strong>{{ event.venue_address }}</strong><br>
+			      		<strong>{{ event.city_name }}, {{ event.region_abbr }} {{ event.postal_code }}</strong>
 			      	</p>
 			        <p>
-			          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
+			          {{ event.description }}
 			        </p>
 
 			      </div>
