--- a/front_end/js/ng-views/index.html
+++ b/front_end/js/ng-views/index.html
@@ -1,6 +1,6 @@
 	<br>
 	<div ng-repeat="event in vm.events">
-		
+
 		<div class="box" >
 			<div class="columns">
 			  <div class="column is-half">
@@ -13,7 +13,7 @@
 			  <div class="column">
 			  	<div class="media-content">
 			      <div class="content">
-			      	<p class="title is-3"><strong>{{ event.title }}</strong></p>
+			      	<p class="title is-3"><a href="" ng-click="vm.setSingleEvent(event)"><strong>{{ event.title }}</strong></a></p>
 			      	<p class="title is-3"><small>{{ event.start_time }}</small></p>
 			      	<p>
 			      		<strong>{{ event.venue_address }}</strong><br>
