--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -34,27 +34,13 @@
       </div>
     </div>
 
+  </div>
+
+  <div class="box">
     <div class="columns">
       <!-- comment card nested below -->
       <div class="column is-10">
-      <div class="commentbox">
-            <div class="media-content">
-              <div class="comment_content">
-                <h4>ChillGuy</h4>
-                <p>posted at <small>[timestamp]</small></p>
-                <p>
-                  Hey that is kinda neat.
-                </p>
-              </div>
-              <div class="comment_content">
-                <h4>Troll McTroll</h4>
-                <p><small>posted at [timestamp]</small></p>
-                <p>
-                  Fuck that this looks boring
-                </p>
-              </div>
-            </div>
-        </div>
+        <h2>blah</h2>
       </div>
       <div class="column">
 
