Add Event Show id

--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -17,8 +17,8 @@
               <span class="icon is-medium"><i class="fa fa-heart"></i></span>
             </a>
           </div>
-          <p class="title is-3"><strong>Event Name</strong></p>
-          <p class="title is-3"><small>7:30pm</small></p>
+          <p class="title is-3"><strong>{{vm.event.title}}</strong></p>
+          <p class="title is-3"><small>{{vm.event.start_time}}</small></p>
           <p>
             <strong>1465 My Drive</strong><br>
             <strong>Garden City, NY 12312</strong>
