--- a/front_end/js/ng-views/index.html
+++ b/front_end/js/ng-views/index.html
@@ -13,7 +13,7 @@
 			  <div class="column">
 			  	<div class="media-content">
 			      <div class="content">
-			      	<p class="title is-3"><a href="" ui-sref="eventShow({id: event.id})"><strong>{{ event.title }}</strong></a></p>
+			      	<p class="title is-3"><a href="" ng-click="vm.setSingleEvent(event)" ui-sref="eventShow({id: event.id})"><strong>{{ event.title }}</strong></a></p>
 			      	<p class="title is-3"><small>{{ event.start_time }}</small></p>
 			      	<p>
 			      		<strong>{{ event.venue_address }}</strong><br>
