--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -1,53 +1,52 @@
 <br>
 <!-- event card below -->
+<div ng-repeat="event in vm.events | filter: {id: vm.eventId}">
+
+    <div class="box" >
+      <div class="columns">
+        <div class="column is-half">
+          <div class="media-left">
+            <figure class="image">
+              <img ng-src="{{event.image.medium.url}}" alt="Image">
+            </figure>
+          </div>
+        </div>
+        <div class="column">
+          <div class="media-content">
+            <div class="content">
+              <p class="title is-3"><a href="" ng-click="vm.setSingleEvent(event)" ui-sref="eventShow({id: event.id})"><strong>{{ event.title }}</strong></a></p>
+              <p class="title is-3"><small>{{ event.start_time }}</small></p>
+              <p>
+                <strong>{{ event.venue_address }}</strong><br>
+                <strong>{{ event.city_name }}, {{ event.region_abbr }} {{ event.postal_code }}</strong>
+              </p>
+              <p>
+                {{ event.description }}
+              </p>
+
+            </div>
+            <nav class="level is-mobile">
+              <div class="level-left">
+                <a class="level-item">
+                  <span class="icon is-medium"><i class="fa fa-heart"></i></span>
+                </a>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+  </div>
 <div class="box">
   <div class="columns">
-    <div class="column is-half">
-      <div class="media-left">
-        <figure class="image">
-          <img src="http://i.imgur.com/HqP5xyB.jpg" alt="Image">
-        </figure>
-      </div>
+    <!-- comment card nested below -->
+    <div class="column is-10">
+      <h2>blah</h2>
     </div>
     <div class="column">
-      <div class="media-content">
-        <div class="content">
-          <div class="level-right">
-            <a class="level-item">
-              <span class="icon is-medium"><i class="fa fa-heart"></i></span>
-            </a>
-          </div>
-          <p class="title is-3"><strong>{{vm.event.title}}</strong></p>
-          <p class="title is-3"><small>{{vm.event.start_time}}</small></p>
-          <p>
-            <strong>1465 My Drive</strong><br>
-            <strong>Garden City, NY 12312</strong>
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
-          </p>
-
-        </div>
-        <nav class="level is-mobile">
-          </div>
-        </nav>
-      </div>
     </div>
-
   </div>
-
-  <div class="box">
-    <div class="columns">
-      <!-- comment card nested below -->
-      <div class="column is-10">
-        <h2>blah</h2>
-      </div>
-      <div class="column">
-
-      </div>
-  </div>
-
 </div>
-
 </div>
 </div>
