--- a/front_end/js/ng-views/index.html
+++ b/front_end/js/ng-views/index.html
@@ -3,7 +3,7 @@
 
 		<div class="box" >
 			<div class="columns">
-			  <div class="column is-half">
+			  <div ng-hide="event.image.medium.url == null" class="column is-half">
 			  	<div class="media-left">
 			      <figure class="image">
 			        <img ng-src="{{event.image.medium.url}}" alt="Image">
