--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -4,7 +4,7 @@
 
     <div class="box" >
       <div class="columns">
-        <div class="column is-half">
+        <div ng-hide="event.image.medium.url == null" class="column is-half">
           <div class="media-left">
             <figure class="image">
               <img ng-src="{{event.image.medium.url}}" alt="Image">
