--- a/front_end/index.html
+++ b/front_end/index.html
@@ -10,6 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-resource.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular-sanitize.js"></script>
 	<script src="js/app.js"></script>
 	<base href="/" />
 </head>
@@ -23,20 +24,6 @@
       </h1>
       <h2 class="subtitle">
         What's going on?
-        <!-- Random catchphrase idea -->
-        <!-- <script type="text/javascript">
-          var catch = [
-            "What's in your weekend?",
-            "start the madness",
-            "make your 'lit' more literal",
-            "What's going on?"
-          ];
-          function randomCatchphrase(arr) {
-            return arr[Math.floor(Math.random() * arr.length)];
-          }
-          for(var x=0; x<20; x++)
-          return(randomCatchphrase(catch));
-        </script> -->
       </h2>
     </div>
   </div>
