Add back button to Show Page

--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -31,6 +31,11 @@
                   <span class="icon is-medium"><i class="fa fa-heart"></i></span>
                 </a>
               </div>
+              <div class="level-right">
+                <a class="level-item">
+                  <span class="icon is-medium"><a class="button is-link">Back</a></span>
+                </a>
+              </div>
             </nav>
           </div>
         </div>
