Add back button link

--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -33,7 +33,7 @@
               </div>
               <div class="level-right">
                 <a class="level-item">
-                  <span class="icon is-medium"><a class="button is-link">Back</a></span>
+                  <span class="icon is-medium"><a ui-sref="eventsIndex" class="button is-link">Back</a></span>
                 </a>
               </div>
             </nav>
