--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -45,8 +45,21 @@
 <div class="box">
   <div class="columns">
     <!-- comment card nested below -->
+  <div class="column is-1"></div>
     <div class="column is-10">
-      <h2>blah</h2>
+      <div class="field">
+        <label class="label">Name</label>
+        <p class="control">
+          <input class="input" type="text" placeholder="Text input">
+        </p>
+      </div>
+      <div class="field">
+        <label class="label">Message</label>
+        <p class="control">
+          <textarea class="textarea" placeholder="Textarea"></textarea>
+        </p>
+      </div>
+
     </div>
     <div class="column">
     </div>
