--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -44,6 +44,26 @@
   </div>
 <div class="box">
   <div class="columns">
+    <div class="column is-1"></div>
+    <div class="column is-10">
+      <div class="box">
+      <article class="media" ng-repeat = "comment in vm.comments">
+        <div class="media-content">
+          <div class="content">
+            <p>
+              <strong>{{comment.author}}</strong>
+              <br>
+              {{comment.content}}
+            </p>
+          </div>
+        </div>
+      </article>
+    </div>
+    </div>
+    <div class="column"></div>
+
+  </div>
+  <div class="columns">
     <!-- comment card nested below -->
   <div class="column is-1"></div>
     <div class="column is-10">
