Add Submit button

--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -79,7 +79,8 @@
           <textarea class="textarea" placeholder="Textarea"></textarea>
         </p>
       </div>
-
+      <div class="block">
+        <a class="button is-primary" ui-sref="#">Submit</a>
     </div>
     <div class="column">
     </div>
