--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -34,6 +34,9 @@
                 <a class="level-item">
                   <span class="icon is-medium"><a ui-sref="eventsIndex" class="button is-link">Back</a></span>
                 </a>
+                <a class="level-item">
+                  <span class="icon is-medium"><a ui-sref="commentNew({id: event.id})" class="button is-primary">New Comment</a></span>
+                </a>
               </div>
             </nav>
           </div>
@@ -63,28 +66,6 @@
     <div class="column"></div>
 
   </div>
-  <div class="columns">
-    <!-- comment card nested below -->
-  <div class="column is-1"></div>
-    <div class="column is-10">
-      <div class="field">
-        <label class="label">Name</label>
-        <p class="control">
-          <input class="input" type="text" placeholder="Text input">
-        </p>
-      </div>
-      <div class="field">
-        <label class="label">Message</label>
-        <p class="control">
-          <textarea class="textarea" placeholder="Textarea"></textarea>
-        </p>
-      </div>
-      <div class="block">
-        <a class="button is-primary" ui-sref="#">Submit</a>
-    </div>
-    <div class="column">
-    </div>
-  </div>
-</div>
+
 </div>
 </div>
