--- a/front_end/js/ng-views/comments/new.html
+++ b/front_end/js/ng-views/comments/new.html
@@ -6,17 +6,17 @@
       <div class="field">
         <label class="label">Name</label>
         <p class="control">
-          <input class="input" type="text" placeholder="Text input">
+          <input class="input" type="text" placeholder="Enter user name" ng-model="vm.comment.author">
         </p>
       </div>
       <div class="field">
         <label class="label">Message</label>
         <p class="control">
-          <textarea class="textarea" placeholder="Textarea"></textarea>
+          <textarea class="textarea" placeholder="Enter your comment" ng-model="vm.comment.content"></textarea>
         </p>
       </div>
       <div class="block">
-        <a class="button is-primary">Submit</a>
+        <a class="button is-primary" ng-click="vm.create()">Submit</a>
     </div>
     <div class="block">
       <a class="button is-primary" ui-sref = "eventShow({id: vm.event})">Back</a>
