--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -51,7 +51,7 @@
     <div class="column is-1"></div>
     <div class="column is-10">
       <div class="box">
-      <article class="media" ng-repeat = "comment in vm.comments">
+      <article class="media" ng-repeat = "comment in vm.comments | filter: {event_id: vm.eventId}">
         <div class="media-content">
           <div class="content">
             <p>
