--- a/front_end/js/ng-views/index.html
+++ b/front_end/js/ng-views/index.html
@@ -1,6 +1,18 @@
 <br>
+<div class="box">
+	<div class="columns">
+		<div class="column is-3">
+		</div>
+		<div class="column is-6">
+			<div class="block">
+				<a ui-sref="cityShow" class="button is-info">See Other Cities</a>
+			</div>
+		</div>
+		<div class="column">
+		</div>
+	</div>
+</div>
 <div ng-repeat="event in vm.events">
-
 	<div class="box">
 		<div class="columns">
 			<div ng-hide="event.image.medium.url == null" class="column is-half">
@@ -21,7 +33,6 @@
 						</p>
 						<p ng-bind-html="event.description">
 						</p>
-
 					</div>
 					<nav class="level is-mobile">
 						<div class="level-left">
