--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -23,13 +23,13 @@
               </p>
               <p ng-bind-html="event.description">
               </p>
+              <a class="level-item">
+                <span class="icon is-medium" ng-click="vm.ÏcreateFavorite()"><i class="fa fa-heart"></i></span>
+              </a>
 
             </div>
             <nav class="level is-mobile">
               <div class="level-left">
-                <a class="level-item">
-                  <span class="icon is-medium"><i class="fa fa-heart"></i></span>
-                </a>
               </div>
               <div class="level-right">
                 <a class="level-item">
