removed heart icon

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -27,6 +27,10 @@
       </h2>
     </div>
   </div>
+  <div class="block">
+      <a ui-sref="eventsIndex" class="button is-">What's going on here?</a>
+  </div>
+  <br>
 </section>
 
 <div class="container">
