--- a/front_end/js/ng-views/show.html
+++ b/front_end/js/ng-views/show.html
@@ -23,9 +23,9 @@
               </p>
               <p ng-bind-html="event.description">
               </p>
-              <a class="level-item">
-                <span class="icon is-medium" ng-click="vm.ÏcreateFavorite()"><i class="fa fa-heart"></i></span>
-              </a>
+              <!-- <a class="level-item">
+                <span class="icon is-medium" ng-click="vm.createFavorite()"><i class="fa fa-heart"></i></span>
+              </a> -->
 
             </div>
             <nav class="level is-mobile">
