--- a/front_end/js/ng-views/index.html
+++ b/front_end/js/ng-views/index.html
@@ -34,13 +34,13 @@
 						<p ng-bind-html="event.description">
 						</p>
 					</div>
-					<nav class="level is-mobile">
+<!-- 					<nav class="level is-mobile">
 						<div class="level-left">
 							<a class="level-item">
 								<span class="icon is-medium"><i class="fa fa-heart"></i></span>
 							</a>
 						</div>
-					</nav>
+					</nav> -->
 				</div>
 			</div>
 		</div>
