added seed data from meag

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -27,8 +27,9 @@
       </h2>
     </div>
   </div>
-  <div class="block">
+  <div class="block has-text-centered">
       <a ui-sref="eventsIndex" class="button is-">What's going on here?</a>
+      <a ui-sref="cityShow" class="button is-info">See Other Cities</a>
   </div>
   <br>
 </section>
