--- a/front_end/js/ng-views/city/index.html
+++ b/front_end/js/ng-views/city/index.html
@@ -3,11 +3,10 @@
 		<div class="column is-3">
 		</div>
 		<div class="column is-6">
-			<div class="block">
-				<a ui-sref="cityShow({city_name: 'blah1'})" class="button is-info">Los Angeles</a>
-				<a ui-sref="cityShow({city_name: 'blah2'})" class="button is-info">New York City</a>
-				<a ui-sref="cityShow({city_name: 'blah3'})" class="button is-info">Chicago</a>
-				
+			<div class="block has-text-centered">
+				<a ui-sref="cityShow({city_name: 'Boston'})" class="button is-info">Boston</a>
+				<a ui-sref="cityShow({city_name: 'Chicago'})" class="button is-info">Chicago</a>
+				<a ui-sref="cityShow({city_name: 'Washington'})" class="button is-info">Washington</a>
 			</div>
 		</div>
 		<div class="column">
