cities query working

--- a/front_end/js/ng-views/city/index.html
+++ b/front_end/js/ng-views/city/index.html
@@ -4,9 +4,9 @@
 		</div>
 		<div class="column is-6">
 			<div class="block has-text-centered">
-				<a ui-sref="cityShow({city_name: 'Boston'})" class="button is-info">Boston</a>
-				<a ui-sref="cityShow({city_name: 'Chicago'})" class="button is-info">Chicago</a>
-				<a ui-sref="cityShow({city_name: 'Washington'})" class="button is-info">Washington</a>
+				<a ui-sref="cityShow({city_name: 'Boston'})" ng-click="vm.getCityInfo()" class="button is-info">Boston</a>
+				<a ui-sref="cityShow({city_name: 'Chicago'})" ng-click="vm.getCityInfo()" class="button is-info">Chicago</a>
+				<a ui-sref="cityShow({city_name: 'Washington'})" ng-click="vm.getCityInfo()" class="button is-info">Washington</a>
 			</div>
 		</div>
 		<div class="column">
